cluster/apps/tools/cyberchef.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
        - name: cyberchef
          image: ghcr.io/gchq/cyberchef:10.23.0@sha256:9a3449fc564dcf86ba0165dadffe0eb95f207bfb1123672ec739eaa99aace050
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: cyberchef
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: cyberchef.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef
                port:
                  number: 80
  tls:
    - hosts:
        - cyberchef.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: cyberchef-tls
