cluster/apps/tools/drawio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:29.6.6@sha256:c5e63fb04020f5857e229b3b7e62b8f24f8378514e134df32a8f39fbae8a3fc4
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: drawio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: drawio.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drawio
                port:
                  number: 8080
  tls:
    - hosts:
        - drawio.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: drawio-tls
