cluster/apps/tools/pairdrop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairdrop
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pairdrop
  template:
    metadata:
      labels:
        app: pairdrop
    spec:
      containers:
        - name: pairdrop
          image: lscr.io/linuxserver/pairdrop:1.11.2@sha256:830bd38a0bff0befbb5353c44a30d366f8ed692e68318a03939041e624b30c58
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pairdrop
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 3000
      port: 3000
      protocol: TCP
  selector:
    app: pairdrop
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pairdrop
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: pairdrop.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pairdrop
                port:
                  number: 3000
  tls:
    - hosts:
        - pairdrop.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: pairdrop-tls
