cluster/apps/tools/spdf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spdf
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: spdf
  template:
    metadata:
      labels:
        app: spdf
    spec:
      containers:
        - name: spdf
          image: ghcr.io/stirling-tools/s-pdf:2.7.1@sha256:c6ed2a3d2f700f083c03b6eca2d2db376d365d0fd9ddb73ba98ad3b6fae1f113
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spdf
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: spdf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spdf
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: spdf.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spdf
                port:
                  number: 8080
  tls:
    - hosts:
        - spdf.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: spdf-tls
