cluster/apps/tools/string-is.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: string-is-deployment
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: string-is
  template:
    metadata:
      labels:
        app: string-is
    spec:
      containers:
        - name: string-is
          image: daveperrett/string-is:v1.38.0@sha256:dfe8775071d37ab6182fdefa8f20ed14beaa4aa5b9e9658904742e57b87d54d9
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: string-is-service
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 3000
      port: 3000
      protocol: TCP
  selector:
    app: string-is
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: string-is-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: string-is.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: string-is-service
                port:
                  number: 3000
  tls:
    - hosts:
        - string-is.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: string-is-tls
